Fix logo scaling on mobile: use width with auto height for proper aspect ratio

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -566,6 +566,11 @@
     height: 70px;
   }
 
+  .logoImg {
+    width: 75px;
+    height: auto;
+  }
+
   .container {
     padding: 0 15px;
     justify-content: space-between;
@@ -607,7 +612,7 @@
   }
 
   .logoImg {
-    width: 70px;
+    width: 60px;
     height: auto;
   }
 
